# rice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
benchmarks/: BENCHMARKS.md  SCODE.jl  aracne.py  benchmark_suite.py  dataloader_utils.py  dataloaders.py  deepsem.py  dygenie3_benchmark.py  dyngenie3_alternate.py  dyngenie3_wrapper.py  fetch_datasets.sh  glasso.py  grenadine_models.py  mamba_install.sh  models.py  ni.py  oldenv.yaml  run_benchmarks.py  run_ni_benchmarks.jl  run_swing.py  runtime_benchmark.py  scode.py  sincerities.py  wcorr.py
benchmarks/DeepSEM/: main.py
benchmarks/NetworkInference.jl/: Project.toml
benchmarks/SWING/: setup.py
private_archive/: hccm.py  hccm_utils.py
private_archive/benchmarks/: ecoli_higher_order_scores_aracne.txt  ecoli_higher_order_scores_ccm.txt  ecoli_higher_order_scores_dygenie3.txt  ecoli_higher_order_scores_genie3.txt  ecoli_higher_order_scores_glasso.txt  ecoli_higher_order_scores_scode.txt  ecoli_higher_order_scores_simplex_smap_ensemble_noprune.txt  ecoli_higher_order_scores_simplex_smap_ensemble_prune.txt  ecoli_higher_order_scores_simplex_smap_isolated_noprune.txt  ecoli_higher_order_scores_sincerities.txt  ecoli_higher_order_scores_smap.txt  ecoli_higher_order_scores_wcorr.txt  ecoli_scores_aracne.txt  ecoli_scores_ccm.txt  ecoli_scores_dygenie3.txt  ecoli_scores_genie3.txt  ecoli_scores_glasso.txt  (+33 more)
rice/: examples.py  metrics.py  models.py  modelsOLD.py  models_new.py  utils.py
tests/: test_ccm.py  test_data.py  test_discovery.py  test_metrics.py  test_utils.py
(+1265 files in other folders)
